Allow the JavaModules option to exclude modules from the --add-modules list